add: whitelist api

--- a/assignment/package.json
+++ b/assignment/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
+  "type": "module",
   "scripts": {
     "start": "node --experimental-modules --es-module-specifier-resolution=node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,11 +11,14 @@
   "author": "Kozlov Viktor",
   "license": "MIT",
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "amqp-connection-manager": "3.2.0",
     "amqplib": "^0.5.5",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.8",
+    "lodash": "^4.17.15",
+    "mysql2": "^2.1.0",
     "redis": "^3.0.2"
   }
 }
